Started Midterm - added basic html markup for index

--- a/Week_3/Class Notes/Gallery/In_Class_Exercise_C/css/style.css
+++ b/Week_3/Class Notes/Gallery/In_Class_Exercise_C/css/style.css
@@ -6,7 +6,7 @@
 
 html{
 	background: url('../img/bg.jpg') no-repeat center center fixed;
-	/* css3 property chack for compatability */
+	/* css3 property check for compatability */
 	background-size: cover;
 }
 
