--- a/Midterm_CyclingGeeks/css/index_style.css
+++ b/Midterm_CyclingGeeks/css/index_style.css
@@ -1,117 +1,118 @@
-		* {
-			font-family: "Helvetica Nue", Arial, sans-serif;
-		}
+* {
+	font-family: "Helvetica Nue", Arial, sans-serif;
+	margin: 0;
+	padding: 0;
+}
 
-		.clearfix:before, .clearfix:after{
-			content: " ";
-			display: block;
-		}
+.clearfix:before, .clearfix:after{
+	content: " ";
+	display: block;
+}
 
-		.clearfix:after{
-			clear: both;
-		}
+.clearfix:after{
+	clear: both;
+}
 
-		.clearfix{
-			*zoom: 1;
-		}
+.clearfix{
+	*zoom: 1;
+}
 
-		.Navigation{
-			display: inline-block;
-			background: lightgrey;
-			width: 100%;
-			height: auto;
-		}
+.Navigation{
+	display: inline-block;
+	background: lightgrey;
+/*	padding-top: 10px;*/
+	width: 100%;
+	height: auto;
+}
 
-		.NavBar nav{
-			float: right;
-			margin: 0;
-		}
+.NavBar nav{
+	float: right;
+	margin: 0;
+}
 
-		.NavBar ul{
-			list-style-type: none;
-			overflow: hidden;
-		}
+.NavBar ul{
+	list-style-type: none;
+	overflow: hidden;
+}
 
-		.NavBar li{
-      		/* float first and thenwe will switch to inline */
-      		float: right; 
-      		/* use inline */
-      		display: inline-block;
-		}
+.NavBar li{
+	float: right; 
+	display: inline-block;
+}
 
-		.NavBar nav ul{
-			display: inline-block;
-			margin: 0;
-		}
+.NavBar nav ul{
+	display: inline-block;
+	margin: 0;
+}
 
-		.NavBar nav ul li{
-			display: inline-block;
-			padding: 20px;
-		}
+.NavBar nav ul li{
+	display: inline-block;
+	padding: 20px;
+}
 
-		.NavBar nav ul li a{
-			text-decoration: none;
-			color: black;
-		}
-		
+.NavBar nav ul li a{
+	text-decoration: none;
+	color: black;
+}
 
-		h1{
-			display: block;
-		}
-		
-		.container1 h2{
-			text-align: center;
-		}
+.NavBar img{
+	display: inline-block;
+	width: 150px;
+	float: left;
+}
 
-		.NavBar img{
-			display: inline-block;
-			width: 150px;
-			float: left;
-		}
+h1{
+	display: block;
+}
 
-		p{
-			line-height: 1.5;
-			text-align: justify;
-		}
+.container1 h2{
+	text-align: center;
+}
 
-		h2{
-			text-align: center;
-		}
+p{
+	line-height: 2.0;
+	text-align: justify;
+}
 
-		div.Container1{
-			display: inline-block;
-			width: 65%;
-			padding: 5px;
-			background-color: yellow;
-			text-align: justify;
-		}
+h2{
+	text-align: center;
+	margin: 25px;
+}
 
-		div.Container1 h3{
-			text-align: center;
-		}
-		
-		div.Container2{
-			display: inline-block;
-			float: right;
-			width: 65%;
-			padding: 5px;
-			text-align: right, justify;
-		}
+div.Container1{
+	display: inline-block;
+	width: 55%;
+	padding: 20px;
+	background-color: yellow;
+	text-align: justify;
+}
 
-		div.Container2 h3{
-			text-align: center;
-		}
+div.Container1 h3{
+	text-align: center;
+}
 
-			div.Container3{
-			display: inline-block;
-			float: left;
-			width: 65%;
-			padding: 5px;
-			text-align: right, justify;
-			background-color: yellow;
-		}
+div.Container2{
+	display: inline-block;
+	float: right;
+	width: 55%;
+	padding: 20px;
+	text-align: right, justify;
+}
 
-		div.Container3 h3{
-			text-align: center;
-		}
+div.Container2 h3{
+	text-align: center;
+}
+
+div.Container3{
+	display: inline-block;
+	float: left;
+	width: 55%;
+	padding: 20px;
+	text-align: right, justify;
+	background-color: yellow;
+}
+
+div.Container3 h3{
+	text-align: center;
+}
 
