--- a/Midterm_CyclingGeeks/css/BikeTrails_style.css
+++ b/Midterm_CyclingGeeks/css/BikeTrails_style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
+
 * {
-	font-family: "Helvetica Nue", Arial, sans-serif;
+	font-family: "Helvetica Nue", sans-serif;
 	margin: 0;
 	padding: 0;
 }
@@ -17,12 +19,103 @@
 	*zoom: 1;
 }
 
+header h1 {
+	font-family: "Permanent Marker", cursive;
+}
+
 .Navigation{
 	display: inline-block;
 	background: lightgrey;
 	width: 100%;
-	padding-top: 10px;
 	height: auto;
+}
+
+header {
+    max-height: 60px;
+    line-height: 50px;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0 5%;
+    margin: 0;
+    position: fixed;
+    top: 0;
+}
+
+header img,
+header h1,
+header nav,
+header nav ul li {
+    display: inline-block;
+}
+
+header img {
+    max-height: 50px;
+    vertical-align: middle;
+}
+
+header h1 {
+    margin: 0;
+    padding: 0;
+}
+
+header nav {
+    float: right;
+}
+
+/*from demo*/
+
+nav ul {
+    list-style: none;
+    /*this float kills the container divs wrapping, think using lack of clearfix to our advantage*/
+    float: left;
+}
+
+nav ul li {
+    width: 100px;
+    float: left;
+}
+
+nav ul li:hover {
+    background-color: #AAA;
+}
+
+/* make the anchor tags in nav display block for clickability */
+
+nav ul a {
+    display: block;
+    color: #222;
+    text-decoration: none;
+    line-height: 30px;
+    padding: 15px;
+    text-align: center;
+}
+
+/* hide sublists by default */
+
+nav ul ul {
+    display: none;
+    background: #DDD;
+}
+
+nav ul li:hover > ul {
+    display: block;
+}
+
+nav ul ul li {
+    width: 300px;
+    padding-left: 10px;
+    overflow: hidden;
+}
+
+nav ul li:hover ul li:hover {
+    background-color: #999;
+}
+
+main{
+	width:90%;
+	margin:0 auto;
+	padding:50px;
+	padding-top: 60px;
 }
 
 .NavBar nav{
@@ -65,13 +158,50 @@
 
 .container1{
 	display: inline-block;
-	width: 75%;
-	float: left;
 	line-height: 2.0;
-	text-align: center;s
+	text-align: justify;
+}
+
+.container1 ul{
+	list-style-type: none;
+}
+
+h1{
+	text-align: center;
 }
 
 
+.Map{
+	text-align: center;
+	margin-top: 2%;
+	margin-bottom: 2%;
+}
+
+button{
+	text-align: center;
+}
+
+.Thumbnail{
+	box-sizing: border-box;
+	display: block;
+	text-align: center;
+	margin-top: 2%;
+	margin-left: 46%;
+	margin-right: 46%;
+	border: black solid 1px;
+	padding: 10px 10px 10px 10px;
+	background-color: blue;
+}
+
+.Thumbnail a{
+	text-decoration: none;
+	text-align: center;
+	color: white;
+}
+
+.Thumbnail p{
+	font-size: 20px;
+}
 
 
 
