--- a/Midterm_CyclingGeeks/css/index_style.css
+++ b/Midterm_CyclingGeeks/css/index_style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
+
 * {
 	font-family: "Helvetica Nue", Arial, sans-serif;
 	margin: 0;
@@ -17,48 +19,107 @@
 	*zoom: 1;
 }
 
+header h1{
+	font-family: "Permanent Marker", cursive;
+}
+
+
 .Navigation{
 	display: inline-block;
 	background: lightgrey;
-/*	padding-top: 10px;*/
 	width: 100%;
 	height: auto;
 }
 
-.NavBar nav{
-	float: right;
-	margin: 0;
+header {
+    max-height: 60px;
+    line-height: 50px;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0 5%;
+    margin: 0;
+    position: fixed;
+    top: 0;
 }
 
-.NavBar ul{
-	list-style-type: none;
-	overflow: hidden;
+header img,
+header h1,
+header nav,
+header nav ul li {
+    display: inline-block;
 }
 
-.NavBar li{
-	float: right; 
-	display: inline-block;
+header img {
+    max-height: 50px;
+    vertical-align: middle;
 }
 
-.NavBar nav ul{
-	display: inline-block;
-	margin: 0;
+header h1 {
+    margin: 0;
+    padding: 0;
 }
 
-.NavBar nav ul li{
-	display: inline-block;
-	padding: 20px;
+header nav {
+    float: right;
 }
 
-.NavBar nav ul li a{
-	text-decoration: none;
-	color: black;
+
+/*from demo*/
+
+nav ul {
+    list-style: none;
+    /*this float kills the container divs wrapping, think using lack of clearfix to our advantage*/
+    float: left;
 }
 
-.NavBar img{
-	display: inline-block;
-	width: 150px;
-	float: left;
+nav ul li {
+    width: 100px;
+    float: left;
+}
+
+nav ul li:hover {
+    background-color: #AAA;
+}
+
+
+/* make the anchor tags in nav display block for clickability */
+
+nav ul a {
+    display: block;
+    color: #222;
+    text-decoration: none;
+    line-height: 30px;
+    padding: 15px;
+    text-align: center;
+}
+
+
+/* hide sublists by default */
+
+nav ul ul {
+    display: none;
+    background: #DDD;
+}
+
+nav ul li:hover > ul {
+    display: block;
+}
+
+nav ul ul li {
+    width: 300px;
+    padding-left: 10px;
+    overflow: hidden;
+}
+
+nav ul li:hover ul li:hover {
+    background-color: #999;
+}
+
+main{
+	width:90%;
+	margin:0 auto;
+	padding:50px;
+	padding-top: 60px;
 }
 
 h1{
@@ -81,10 +142,17 @@ h2{
 
 div.Container1{
 	display: inline-block;
+	float: left;
 	width: 55%;
 	padding: 20px;
-	background-color: yellow;
 	text-align: justify;
+}
+
+.Image1{
+	display: inline-block;
+	float: right;
+	box-sizing: border-box;
+	margin-top: 20px;
 }
 
 div.Container1 h3{
@@ -103,13 +171,19 @@ div.Container2 h3{
 	text-align: center;
 }
 
+.Image2{
+	display: inline-block;
+	float: left;
+	box-sizing: border-box;
+	margin-top: 20px;
+}
+
 div.Container3{
 	display: inline-block;
 	float: left;
 	width: 55%;
 	padding: 20px;
 	text-align: right, justify;
-	background-color: yellow;
 }
 
 div.Container3 h3{
