--- a/Midterm_CyclingGeeks/css/newbies_style.css
+++ b/Midterm_CyclingGeeks/css/newbies_style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
+
 * {
 	font-family: "Helvetica Nue", Arial, sans-serif;
 	margin: 0;
@@ -17,50 +19,108 @@
 	*zoom: 1;
 }
 
+header h1 {
+	font-family: "Permanent Marker", cursive;
+}
+
 .Navigation{
 	display: inline-block;
 	background: lightgrey;
 	width: 100%;
-	padding-top: 10px;
 	height: auto;
 }
 
-.NavBar nav{
-	float: right;	
-	margin: 0;
+header {
+    max-height: 60px;
+    line-height: 50px;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0 5%;
+    margin: 0;
+    position: fixed;
+    top: 0;
 }
 
-.NavBar ul{
-	list-style-type: none;
-	overflow: hidden;
+header img,
+header h1,
+header nav,
+header nav ul li {
+    display: inline-block;
 }
 
-.NavBar li{
-	/* float first and thenwe will switch to inline */
-	float: right; 
-	/* use inline */
-	display: inline-block;
+header img {
+    max-height: 50px;
+    vertical-align: middle;
 }
 
-.NavBar nav ul{
-	display: inline-block;
-	margin: 0;
+header h1 {
+    margin: 0;
+    padding: 0;
 }
 
-.NavBar ul li{
-	display: inline-block;
-	padding: 20px;
+header nav {
+    float: right;
 }
 
-.NavBar ul li a{
-	text-decoration: none;
-	color: black;
+
+/*from demo*/
+
+nav ul {
+    list-style: none;
+    /*this float kills the container divs wrapping, think using lack of clearfix to our advantage*/
+    float: left;
 }
 
-.NavBar img{
-	display: inline-block;
-	width: 150px;
-	float: left;
+nav ul li {
+    width: 100px;
+    float: left;
+}
+
+nav ul li:hover {
+    background-color: #AAA;
+}
+
+
+/* make the anchor tags in nav display block for clickability */
+
+nav ul a {
+    display: block;
+    color: #222;
+    text-decoration: none;
+    line-height: 30px;
+    padding: 15px;
+    text-align: center;
+}
+
+
+/* hide sublists by default */
+
+nav ul ul {
+    display: none;
+    background: #DDD;
+}
+
+nav ul li:hover > ul {
+    display: block;
+}
+
+nav ul ul li {
+    width: 300px;
+    padding-left: 10px;
+    overflow: hidden;
+}
+
+nav ul li:hover ul li:hover {
+    background-color: #999;
+}
+
+main{
+	width:90%;
+	margin:0 auto;
+	padding:50px;
+	padding-top: 60px;
+	padding-right: 0;
+	padding-left: 70px;
 }
 
 h1{
@@ -84,9 +144,6 @@ p{
 	float: right;
 }
 
-.container1 h2{
-	text-align: center;
-}
 
 .container2{
 	display: inline-block;
@@ -97,6 +154,7 @@ p{
 
 .container1 p, .container2 p{
 	text-align: justify;
+	line-height: 2;
 }
 
 .sidebar{
@@ -104,12 +162,13 @@ p{
 	float: top;
 	position: fixed;
 	background-color: rgba(0,150,0,0.5);
-	width: 15%;
+	width: 20%;
 	height: 100%;
 	border: black solid;
 	border-left: none;
 	padding: 20px;
 	padding-top: 5px;
+	top: 60px;
 }
 
 .sidebar h2{
@@ -118,7 +177,7 @@ p{
 
 .sidebar p{
 	font-weight: bold;
-	font-size: 20px;
+	font-size: 18px;
 }
 .sidebar ul{
 	line-height: 2.0;
