--- a/Final/css/BikeTrails_style.css
+++ b/Final/css/BikeTrails_style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
 
 * {
-	font-family: "Helvetica Nue", sans-serif;
+	font-family: "Arial", sans-serif;
 	margin: 0;
 	padding: 0;
 }
@@ -19,12 +19,13 @@
 	*zoom: 1;
 }
 
-header h1 {
+header h1{
 	font-family: "Permanent Marker", cursive;
 }
 
+
 .Navigation{
-	z-index: 99999999999999999999999;
+	z-index: 10;
 	display: inline-block;
 	background: lightgrey;
 	width: 100%;
@@ -38,7 +39,7 @@ header {
     width: 100%;
     padding: 0 5%;
     margin: 0;
-    position: fixed;
+    position: static;
     top: 0;
 }
 
@@ -63,6 +64,7 @@ header nav {
     float: right;
 }
 
+
 /*from demo*/
 
 nav ul {
@@ -80,6 +82,7 @@ nav ul li:hover {
     background-color: #AAA;
 }
 
+
 /* make the anchor tags in nav display block for clickability */
 
 nav ul a {
@@ -90,6 +93,7 @@ nav ul a {
     padding: 15px;
     text-align: center;
 }
+
 
 /* hide sublists by default */
 
@@ -112,52 +116,102 @@ nav ul li:hover ul li:hover {
     background-color: #999;
 }
 
+.heading{
+	display: block;
+	vertical-align: middle;
+	text-align: center;
+	height: 120px;
+	margin-bottom: 0;
+	margin-top: 0;
+}
+
+.heading h1{
+    margin: 0;
+    padding: 0;
+	color: white;
+	letter-spacing: 0.5em;
+	text-shadow: 2px 2px black;
+	padding-top: 40px;
+}
+
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    vertical-align: middle;
+    text-align: center;
+    background-color: skyblue; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    display: none;
+    padding-top: 25%;
+}
+
+/* The navigation menu links */
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 30px;
+    color: black;
+    display: block;
+    transition: 0.3s
+}
+
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+button.accordion {
+    background-color: skyblue;
+    color: blue;
+    cursor: pointer;
+    width: 100%;
+    text-align: center;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+div.panel {
+    padding: 0 18px;
+    background-color: skyblue;
+    display: none;
+}
+
+.hamburger{
+	display: none;
+	text-align: right;
+	padding: 20px;
+	cursor: pointer;
+}
+
+.hamburger div{
+	width: 35px;
+    height: 5px;
+    background-color: grey;
+    margin: 6px 0;
+}
+
+
 main{
 	width:90%;
 	margin:0 auto;
-	padding:50px;
-	padding-top: 60px;
+	margin-top: 2.5%;
+	z-index: -1;
 }
 
-.NavBar nav{
-	float: right;	
-	margin: 0;
-}
-
-.NavBar ul{
-	list-style-type: none;
-	overflow: hidden;
-}
-
-.NavBar li{
-	/* float first and thenwe will switch to inline */
-	float: right; 
-	/* use inline */
-	display: inline-block;
-}
-
-.NavBar nav ul{
-	display: inline-block;
-	margin: 0;
-}
-
-.NavBar ul li{
-	display: inline-block;
-	padding: 20px;
-}
-
-.NavBar ul li a{
-	text-decoration: none;
-	color: black;
-}
-
-.NavBar img{
-	display: inline-block;
-	width: 150px;
-	float: left;
-}
 
 .container1{
+	z-index: -1;
 	display: inline-block;
 	line-height: 2.0;
 	text-align: justify;
@@ -171,48 +225,55 @@ h1{
 	text-align: center;
 }
 
-
-.Map{
-	z-index: 9;
-	text-align: center;
-	position: relative;
-	margin-top: 2%;
-	margin-bottom: 2%;
+.w3-content{
+    text-align: center;
+    margin-top: 20%;
 }
 
-.image0{
-	display: block;
-	position: absolute;
-	z-index: 99999;
-	top: 0;
+@media screen and (max-height: 700px) {
+    .sidenav {padding-top: 20%;}
+    .sidenav a {font-size: 25px;}
 }
 
-
-button{
-	text-align: center;
+@media only screen and (max-width: 1024px) {
+	.sidnav {
+		padding-top: 20%;
+		line-height: 2.0;
+	}
+	.sidenav a {
+		font-size: 60px;
+		line-height: 2.0;
+	}
 }
+@media only screen and (max-width: 1024px){
+	
+	.Navigation{
+		display: none;
+	}
 
-.Thumbnail{
-	box-sizing: border-box;
-	display: block;
-	text-align: center;
-	margin-top: 2%;
-	margin-left: 46%;
-	margin-right: 46%;
-	border: black solid 1px;
-	padding: 10px 10px 10px 10px;
-	background-color: blue;
+	.hamburger{
+		display: block;
+	}
+
+	.sidenav{
+		display: block;
+	}
+
+	.heading{
+		top: 0;
+	}
+
+    .mapboxgl-map{
+        display:  none;
+    }
+
+    #map{
+       display: none;
+    }
+
+    .img{
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
 }
-
-.Thumbnail a{
-	text-decoration: none;
-	text-align: center;
-	color: white;
-}
-
-.Thumbnail p{
-	font-size: 20px;
-}
-
-
-
